/*
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

//----------------------------------------------
//  Generate command
//----------------------------------------------
//
// When modifying this file, please run the following generate command,
// and include generated code in your commit
//
// third-party/java/protobuf/gen.sh
//
//-----------------------

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.facebook.buck.workertool.model";
option java_outer_classname = "WorkerToolProto";

// best practices to include version number in package
package workertool.api.v1;

message CommandTypeMessage {
    CommandType command_type = 1;

    enum CommandType {
        UNKNOWN = 0;
        EXECUTE_COMMAND = 1;
        START_PIPELINE_COMMAND = 2;
        START_NEXT_PIPELINING_COMMAND = 3;
        SHUTDOWN_COMMAND = 4;
    }
}

message ExecuteCommand {
    string action_id = 1;
}

message StartPipelineCommand {
    repeated string action_id = 1;
}

// Represents a signal that the next command in pipelining command could be started
message StartNextPipeliningCommand{
    string actionId = 1;
}

message ShutdownCommand {
}
